--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -13,26 +13,54 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.14.14",
     "@expo/vector-icons": "^14.1.0",
+    "@gorhom/bottom-sheet": "^5.1.8",
+    "@likashefqet/react-native-image-zoom": "^4.3.0",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
+    "@shopify/flash-list": "1.7.6",
     "expo": "~53.0.20",
+    "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.8",
+    "expo-clipboard": "~7.1.5",
+    "expo-dev-client": "~5.2.4",
+    "expo-document-picker": "~13.1.6",
     "expo-font": "~13.3.2",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.4",
+    "expo-secure-store": "~14.2.3",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-ios-context-menu": "^3.1.0",
+    "react-native-ios-utilities": "^5.1.2",
+    "react-native-mmkv": "^3.3.0",
+    "react-native-openai": "^0.6.2",
+    "react-native-purchases": "^9.1.0",
     "react-native-reanimated": "~3.17.4",
+    "react-native-redash": "^18.1.3",
+    "react-native-root-siblings": "^5.0.1",
+    "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0"
+    "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-web": "~0.20.0",
+    "zeego": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.0.10",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.9",
